Chapter 01 Italy map 0.1

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "Python: knn_to_data.py",
             "type": "python",
@@ -31,8 +30,33 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "C:/GIT/Data-Science-Algorithms-in-a-Week-Second-Edition/Chapter01/mary_and_temperature_preferences"
+        },
+        {
+            "name": "Python: knn_to_pgm.py",
+            "type": "python",
+            "request": "launch",
+            "program": "knn_to_pgm.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "C:/GIT/Data-Science-Algorithms-in-a-Week-Second-Edition/Chapter01/map_of_italy",
+            "args": [
+                "italy_100partial.pgm",
+                "italy_100completed_3_a.pgm",
+                "3"
+            ]
+        },
+        {
+            "name": "Python: italy_draw_graph.py",
+            "type": "python",
+            "request": "launch",
+            "program": "italy_draw_graph.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "C:/GIT/Data-Science-Algorithms-in-a-Week-Second-Edition/Chapter01/map_of_italy",
+            "args": [
+                "italy_100completed_3_a.pgm",
+                "italy.pgm"
+            ]
         }
-
-
     ]
 }
